--- a/reddit/templates/blog/base.html
+++ b/reddit/templates/blog/base.html
@@ -12,6 +12,11 @@
             {% if user.is_authenticated %}
              <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             {% endif %}
+
+            {% if user.is_authenticated %}
+             <a href="{% url 'feedback_new' %}" class="top-menu"><span class="glyphicon glyphicon-envelope"></span></a>
+            {% endif %}
+
             <h1><a href="/">Django Girls Blog</a></h1>
         </div>
         <div class="content container">
